--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,120 @@ sqlalchemy>=2.0.0       # SQL toolkit and ORM
 # Development dependencies
 black>=22.0.0  # Code formatting tool
 pytest>=7.0.0  # Testing framework
+
+
+asttokens==3.0.0
+beautifulsoup4==4.13.5
+bidict==0.23.1
+black==25.1.0
+blinker==1.9.0
+boto3==1.40.16
+botocore==1.40.16
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.1.8
+colorama==0.4.6
+comm==0.2.3
+contourpy==1.3.2
+cycler==0.12.1
+debugpy==1.8.16
+decorator==5.2.1
+dnspython==2.7.0
+dotenv==0.9.9
+dynaconf==3.2.11
+email_validator==2.2.0
+eventlet==0.39.1
+executing==2.2.1
+filelock==3.19.1
+Flask==3.1.0
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-SocketIO==5.5.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+fonttools==4.58.0
+fsspec==2025.9.0
+gensim==0.10.1
+greenlet==3.1.1
+h11==0.14.0
+idna==3.10
+iniconfig==2.1.0
+ipykernel==6.30.1
+ipython==9.5.0
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+jmespath==1.0.1
+joblib==1.5.2
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+kiwisolver==1.4.8
+Mako==1.3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mpmath==1.3.0
+mypy_extensions==1.1.0
+narwhals==2.3.0
+nest-asyncio==1.6.0
+networkx==3.5
+nltk==3.9.1
+numpy==2.3.2
+opencv-python==4.11.0.86
+packaging==25.0
+pandas==2.3.2
+parso==0.8.5
+pathspec==0.12.1
+pillow==11.2.1
+platformdirs==4.4.0
+plotly==6.3.0
+pluggy==1.6.0
+prompt_toolkit==3.0.52
+psutil==7.0.0
+pure_eval==0.2.3
+Pygments==2.19.2
+pyparsing==3.2.3
+PySide6==6.9.2
+PySide6_Addons==6.9.2
+PySide6_Essentials==6.9.2
+pytest==8.4.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-engineio==4.12.0
+python-socketio==5.13.0
+pytz==2025.2
+pywin32==311
+PyYAML==6.0.2
+pyzmq==27.0.2
+regex==2025.9.1
+requests==2.32.5
+rich==14.1.0
+s3transfer==0.13.1
+scikit-learn==1.7.1
+scipy==1.16.1
+setuptools==80.9.0
+shellingham==1.5.4
+shiboken6==6.9.2
+simple-websocket==1.1.0
+six==1.17.0
+soupsieve==2.8
+SQLAlchemy==2.0.40
+stack-data==0.6.3
+sympy==1.14.0
+threadpoolctl==3.6.0
+torch==2.8.0
+tornado==6.5.2
+tqdm==4.67.1
+traitlets==5.14.3
+typer==0.17.4
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.5.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
+wikipedia==1.4.0
+wsproto==1.2.0
+WTForms==3.2.1
