--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,11 @@ dependencies = [
     "uvicorn>=0.24.0",
     "python-multipart>=0.0.6",
     "httpx>=0.25.0",
+    "pyyaml>=6.0.2",
+    "psutil>=7.1.0",
+    "dynaconf>=3.2.11",
+    "plotly>=6.3.0",
+    "scipy>=1.16.2",
 ]
 
 [project.optional-dependencies]
